--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
